feat: Implement ProfileScreen and ViewModel (#80)
## Purpose of the change
This PR implements the ProfileScreen and its ViewModel (and related
tests):

ViewModel gives:
- Selected user's infos: User class
- Is the selected user the same as authentified user
- Achivement list: All achievements of selected user

ProfileScreen shows:
- User informations
- Its animals collected count and friends count
- Its achievements
- A map preview
If its the own user's profile:
- A settings button
Else:
- A friend request button
(All these are clickable and link to their respective screens)

## Related issues
Updates #30 

## Trade-offs or known limitations
- User needs to be logged in for the viewModel to give correct user
informations otherwise it gives default values as if it was looking at
someone else's profile.
- Currently achievements and map only have placeholders (because
achievements currently don't have a real pictureURL) [work in progress]

## How to test
1. Run ProfileScreenViewModelTest
2. Run ProfileScreenTest

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_second">SecondActivity</string>
     <string name="welcome">Welcome to Wildex!</string>
+    <string name="profile">My Profile</string>
+    <string name="user_profile">User Profile</string>
 </resources>
