refactor: integrate screen and navigation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,10 @@
     <string name="default_web_client_id">55923703889-g4po1sphfo9peea096muat5e44rr5l90.apps.googleusercontent.com</string>
     <string name="google_logo">Google Logo</string>
     <string name="sign_in">Sign in with Google</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_main">Wildex</string>
     <string name="title_activity_second">SecondActivity</string>
     <string name="welcome">Welcome to Wildex!</string>
     <string name="profile">My Profile</string>
     <string name="user_profile">User Profile</string>
+    <string name="not_implemented">Coming soon …</string>
 </resources>
