--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,11 @@
     <string name="welcome">Welcome to Wildex!</string>
     <string name="profile">My Profile</string>
     <string name="user_profile">User Profile</string>
+    <string name="view_achievements">View all achievements →</string>
+    <string name="prev_arrow">Prev</string>
+    <string name="next_arrow">Next</string>
+    <string name="fail_loading">Loading failed. Please try again.</string>
+    <string name="view_map">View in full screen →</string>
+    <string name="default_description">No description yet.</string>
+    <string name="send_friend_request">Send Friend Request</string>
 </resources>
