refactor: cleanup profile screen and view model implementation  (#107)
Refactored ProfileScreen ViewModel and composables for better readability, consistent state handling, and stable builds.
Added new theme colors to enhance visual consistency across the profile UI.
Updated MainActivity to enable direct preview of the ProfileScreen for development purposes.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,12 @@
     <string name="welcome">Welcome to Wildex!</string>
     <string name="profile">My Profile</string>
     <string name="user_profile">User Profile</string>
+    <string name="view_achievements">View all achievements →</string>
+    <string name="prev_arrow">Prev</string>
+    <string name="next_arrow">Next</string>
+    <string name="fail_loading">Loading failed. Please try again.</string>
+    <string name="view_map">View in full screen →</string>
+    <string name="default_description">No description yet.</string>
+    <string name="send_friend_request">Send Friend Request</string>
+    <string name="no_achievements">No achievements yet!</string>
 </resources>
