chore: rebase onto main

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="welcome">Welcome to Wildex!</string>
     <string name="profile">My Profile</string>
     <string name="user_profile">User Profile</string>
+    <string name="not_implemented">Coming soon …</string>
     <string name="view_achievements">View all achievements →</string>
     <string name="prev_arrow">Prev</string>
     <string name="next_arrow">Next</string>
