feat: implement collection screen top bar
I added the implementation of the collection screen top bar. If the
current user accesses his own collection, then the top bar has a title,
a notification button and the user's profile button. Otherwise, if the
user accesses another user's collection, the top bar consists of only a
go back button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="sign_in">Sign in with Google</string>
     <string name="welcome">Welcome to Wildex!</string>
     <string name="profile">My Profile</string>
+    <string name="collection">My Collection</string>
     <string name="user_profile">User Profile</string>
     <string name="not_implemented">Coming soon …</string>
     <string name="view_achievements">View all achievements →</string>
