feat: add strings used in AchievementsScreen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,7 @@
     <string name="no_nearby_posts">No nearby posts.\nStart posting…</string>
     <string name="map_style">mapbox://styles/ainar5724/cmh7gfj6g00eo01qxdj3ca7tq</string>
     <string name="map_standard_import">basemap</string>
+    <string name="trophies">Your trophies</string>
+    <string name="unlocked_achievements">Unlocked</string>
+    <string name="to_discover">To discover</string>
 </resources>
