Implement Collection Screen View and ViewModel
## Description
This PR implements the `CollectionScreen.kt` as well as the
`CollectionScreenViewModel.kt`. This allows the user of the app to
access his own collection of animals, but also access any user's
collection with a click from its profile. By viewing a user's
collection, we mean seeing the unlocked animals and allowing to click on
them to be redirected to the `AnimalDetailsScreen` and also see the yet
to be discovered animals. These locked animals cannot be clicked on and
a user needs to first unlock them to access their details.

## Related issues
Closes #75 and #99 

## Known limitations
-The link from the `CollectionScreen` to the `AnimalDetailsScreen` is
yet to be implemented

## How to test
-Run `CollectionScreenTest.kt`

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="sign_in">Sign in with Google</string>
     <string name="welcome">Welcome to Wildex!</string>
     <string name="profile">My Profile</string>
+    <string name="collection">My Collection</string>
     <string name="user_profile">User Profile</string>
     <string name="not_implemented">Coming soon …</string>
     <string name="view_achievements">View all achievements →</string>
@@ -16,6 +17,8 @@
     <string name="default_description">No description yet.</string>
     <string name="send_friend_request">Send Friend Request</string>
     <string name="no_achievements">No achievements yet!</string>
+    <string name="empty_current_collection">No animals in your collection yet.\nStart exploring…</string>
+    <string name="empty_other_collection">No animals in this collection.</string>
     <string name="no_nearby_posts">No nearby posts.\nStart posting…</string>
     <string name="map_style">mapbox://styles/ainar5724/cmh7gfj6g00eo01qxdj3ca7tq</string>
     <string name="map_standard_import">basemap</string>
