fix: remove redundant strings in main Activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     <string name="no_nearby_posts">No nearby posts.\nStart posting…</string>
     <string name="map_style">mapbox://styles/ainar5724/cmh7gfj6g00eo01qxdj3ca7tq</string>
     <string name="map_standard_import">basemap</string>
+    <string name="null_user_uid">User UID is null</string>
+    <string name="null_post_uid">Post UID is null</string>
 </resources>
