feat: implement achievement screen (#183)
Implemented the `AchievementsScreen` a new UI component that
allows users to browse their achievements within the application. The
screen distinguishes between unlocked and locked achievements, improving
user engagement and providing clear progress visualization.

Included the following components:
- `LabeledDivider` for section titles.
- `AchievementItem` for displaying achievement images and names.
- Integration with `AchievementsScreenViewModel` to load data
asynchronously.
- Added semantic keys and test tags for accessibility and UI testing.

## Related issues
Closes #46 

## Trade-offs or known limitations 
- Navigation is yet to be updated to take into account this new screen.

## Notes
- Added new string resources for improved section labeling

## How to test
1. Execute `./gradlew test` to run unit tests.
2. Verify that all tests in `AchievementsScreenTest` and
`AchievementsScreenViewModelTests` pass successfully.

---------

Co-authored-by: leolmr1110 <leonardlemaire2006@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,9 @@
     <string name="no_nearby_posts">No nearby posts.\nStart posting…</string>
     <string name="map_style">mapbox://styles/ainar5724/cmh7gfj6g00eo01qxdj3ca7tq</string>
     <string name="map_standard_import">basemap</string>
+    <string name="trophies">Your trophies</string>
+    <string name="unlocked_achievements">Unlocked</string>
+    <string name="to_discover">To discover</string>
     <string name="null_user_uid">User UID is null</string>
     <string name="null_post_uid">Post UID is null</string>
 </resources>
