--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,10 +23,15 @@
     <!-- Profile screen -->
     <string name="profile">My Profile</string>
     <string name="user_profile">User Profile</string>
-    <string name="not_implemented">Coming soon …</string>
-    <string name="view_achievements">View all achievements →</string>
     <string name="prev_arrow">Prev</string>
     <string name="next_arrow">Next</string>
+    <string name="view_map">View in full screen →</string>
+    <string name="default_description">No description yet.</string>
+    <string name="send_friend_request">Send Friend Request</string>
+    <string name="view_achievements">View all achievements →</string>
+    <string name="no_achievements">No achievements yet!</string>
+
+    <!-- Settings screen -->
     <string name="delete_account">Delete account</string>
     <string name="delete_account_confirmation">Are you sure you want to delete your account?</string>
     <string name="delete">Delete</string>
@@ -41,12 +46,6 @@
     <string name="light_mode">Light</string>
     <string name="dark_mode">Dark</string>
     <string name="system_default">Auto</string>
-    <string name="fail_loading">Loading failed. Please try again.</string>
-    <string name="view_map">View in full screen →</string>
-    <string name="default_description">No description yet.</string>
-    <string name="send_friend_request">Send Friend Request</string>
-    <string name="view_achievements">View all achievements →</string>
-    <string name="no_achievements">No achievements yet!</string>
 
     <!-- Collection screen -->
     <string name="empty_current_collection">No animals in your collection yet.\nStart exploring…</string>
