feat: improve UI layout and buttons

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,7 +69,7 @@
     <string name="report_author">Reported by</string>
     <string name="report_author_current">me</string>
     <string name="submit_report">Submit a Report!</string>
-    <string name="cancel_report">Cancel Report ?</string>
+    <string name="cancel_report">Cancel Report</string>
     <string name="self_assign_report">I got this!</string>
     <string name="resolve_report">Resolved!</string>
     <string name="cancel_self_assigned_report">Cancel</string>
