--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="prev_arrow">Prev</string>
     <string name="next_arrow">Next</string>
     <string name="view_map">View in full screen →</string>
-    <string name="default_description">No description yet.</string>
+    <string name="default_description">No bio yet.</string>
     <string name="send_friend_request">Send Friend Request</string>
     <string name="view_achievements">View all achievements →</string>
     <string name="no_achievements">No achievements yet!</string>
