feat: implement Settings screen
I implemented the settings screen which allows to manage the
currently logged in user's preferences like app appearance mode, the
user's status or the notifications enablement. It also allows the user
to delete his account or sign out from the app. To avoid involuntary
account deletions, when a user wants to delete his account, a
confirmation popup appears to make sure the operation was initiated on
purpose. Once a user deletes his account, he is taken back to the sign
in screen where he can create a new account if he wishes.

The theme of the app changes dynamically as the user
changes the appearance mode.

In order to implement the "Delete account" button, I had to implement
some new functions in the existing repositories. These new functions
are:
- `deleteUserSettings(userId: Id)` in `UserSettingsRepository`
- `deleteUserAnimals(userId: Id)` in `UserAnimalsRepository`
- `deleteUserAchievements(userId: Id)` in `UserAchievementsRepository`
- `deletePostsByUser(userId: Id)` in `PostsRepository`
- `deleteReportsByUser(userId: Id)` in `ReportRepository`
- `deleteLikesByUser(userId: Id)` in `LikeRepository`
- `deleteCommentsByUser(userId: Id)` in `CommentRepository`
These added functions have been tested and their definitions have been
added to every implementation of the repositories' interfaces.

With these newly added functions, I was able to define the use case
`DeleteUserUseCase` which handles deleting a user's account from the
database. While I was at it, I also defined another use case
`InitializeUserUseCase` which handles creating a user's account on the
first sign in. This creation use case was integrated into the
`SignInViewModel`.

Finally, I deleted the function `getNewUid()` from the `UserRepository`
as it was never used and the identifiers of the user are taken from the
Firebase user identifiers.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,11 +23,30 @@
     <!-- Profile screen -->
     <string name="profile">My Profile</string>
     <string name="user_profile">User Profile</string>
+    <string name="prev_arrow">Prev</string>
+    <string name="next_arrow">Next</string>
     <string name="view_map">View in full screen →</string>
     <string name="default_description">No description yet.</string>
     <string name="send_friend_request">Send Friend Request</string>
     <string name="view_achievements">View all achievements →</string>
     <string name="no_achievements">No achievements yet!</string>
+
+    <!-- Settings screen -->
+    <string name="delete_account">Delete account</string>
+    <string name="delete_account_confirmation">Are you sure you want to delete your account?</string>
+    <string name="delete">Delete</string>
+    <string name="cancel">Cancel</string>
+    <string name="settings">Settings</string>
+    <string name="edit_profile">Edit profile</string>
+    <string name="notifications">Notifications</string>
+    <string name="user_status">User status</string>
+    <string name="regular_status">Regular</string>
+    <string name="professional_status">Professional</string>
+    <string name="appearance">Appearance</string>
+    <string name="light_mode">Light</string>
+    <string name="dark_mode">Dark</string>
+    <string name="system_default">Auto</string>
+    <string name="sign_out">Sign out</string>
 
     <!-- Collection screen -->
     <string name="empty_current_collection">No animals in your collection yet.\nStart exploring…</string>
