fix: fix failling tests and reformat them
# Conflicts:
#	app/src/androidTest/java/com/android/wildex/ui/profile/ProfileScreenTest.kt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="view_map">View in full screen →</string>
     <string name="default_description">No bio yet.</string>
     <string name="send_friend_request">Send Friend Request</string>
+    <string name="cancel_friend_request">Cancel Friend Request</string>
     <string name="view_achievements">View all achievements →</string>
     <string name="no_achievements">No achievements yet!</string>
 
