feat: implement report screen and refactor (#241)
## Description
This PR introduces the `ReportScreen` (that uses the
`ReportScreenViewModel`), which is the rightmost screen accessible from
the bottom navigation menu. It's the overview screen for all reports,
but also depends on the type of user. The PR also includes a small
refactoring of the `ReportScreenViewModel`

### Details for the `ReportScreen`
- It has a top bar with the notifications, the page title and the users
profile picture. The title depends on the type of user: "My reports" for
`REGULAR` users and "Reports" for a `PROFESSIONAL` users
- Below that is the scrollable page with the reports shown in boxes. As
mentioned in the view model PR (#195), `PROFESSIONAL` users see all
reports, while `REGULAR` users only see their own
- For every report item we see the following information in order : 
  - The author, date and location of the report
  - The report picture
  - The report description
  - The report buttons based on the available actions
- The buttons for a report appear based on a few conditions:
- For a `REGULAR` user, there will be a cancel report button, and a
report assignee card if the report has been assigned to a `PROFESSIONAL`
user
- For a `PROFESSIONAL` user, when the report has not been assigned
anyone, a self-assign report button will appear, and if the report is
made by that same `PROFESSIONAL` user, the cancel report button will
appear next to it. If it's been assigned to the user, a resolve report
button and a cancel self-assignment button will appear. If it's been
assgined to someone else, the report assignee card will show, and if the
report is made by the user, the cancel report button will also show.
- Overlayed at the bottom of the scrollable report list, there's a
"Submit a Report!" button that takes users to the `SubmitReportScreen`

Here are a few examples of the screen:

A `REGULAR` user seeing his report, before and after it's been assigned
to someone
<p align="center">
<img


--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,4 +82,17 @@
     <string name="confirm_button">✓ Confirm &amp; Post</string>
     <string name="footer">Your sighting will be shared with the wildlife community</string>
 
+    <!-- Report screen -->
+    <string name="report_title_regular">My Reports</string>
+    <string name="report_title_professional">Reports</string>
+    <string name="no_reports">Nothing to see here...</string>
+    <string name="report_author">Reported by</string>
+    <string name="report_author_current">me</string>
+    <string name="submit_report">Submit a Report!</string>
+    <string name="cancel_report">Cancel Report</string>
+    <string name="self_assign_report">I got this!</string>
+    <string name="resolve_report">Resolved!</string>
+    <string name="cancel_self_assigned_report">Cancel</string>
+    <string name="report_assignee">Assigned to:</string>
+
 </resources>
