--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,11 @@
     <string name="view_achievements">View all achievements →</string>
     <string name="no_achievements">No achievements yet!</string>
 
+    <!-- Edit Profile screen -->
+    <string name="edit_profile_title">Edit Profile</string>
+    <string name="create_profile_title">Create Profile</string>
+    <string name="edit_profile_save_successfully">Profile changes saved successfully</string>
+    <string name="default_profile_picture_link">https://static.vecteezy.com/system/resources/thumbnails/020/765/399/small/default-profile-account-unknown-icon-black-silhouette-free-vector.jpg</string>
     <!-- Settings screen -->
     <string name="delete_account">Delete account</string>
     <string name="delete_account_confirmation">Are you sure you want to delete your account?</string>
