--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,11 +88,13 @@
     <string name="camera_request_msg_1">We need your camera so you can take pictures of animals that might be hurt or need help</string>
     <string name="camera_request_msg_2">Your photos help rescuers understand what is happening and act quickly</string>
     <string name="description">Description</string>
+    <string name="submitting">Submitting…</string>
+    <string name="submitted">Submit!</string>
 
     <!-- Report screen -->
     <string name="report_title_regular">My Reports</string>
     <string name="report_title_professional">Reports</string>
-    <string name="no_reports">Nothing to see here...</string>
+    <string name="no_reports">Nothing to see here…</string>
     <string name="report_author">Reported by</string>
     <string name="report_author_current">me</string>
     <string name="submit_report">Submit a Report!</string>
