--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="create_profile_title">Create Profile</string>
     <string name="edit_profile_save_successfully">Profile changes saved successfully</string>
     <string name="default_profile_picture_link">https://static.vecteezy.com/system/resources/thumbnails/020/765/399/small/default-profile-account-unknown-icon-black-silhouette-free-vector.jpg</string>
+
     <!-- Settings screen -->
     <string name="delete_account">Delete account</string>
     <string name="delete_account_confirmation">Are you sure you want to delete your account?</string>
@@ -81,11 +82,11 @@
     <string name="camera_permission_msg_2">Grant camera access — or we’ll just imagine the animal for you.</string>
     <string name="request_permission_button">Grant Camera Access</string>
     <string name="upload_button">Upload from Gallery</string>
-    <string name="detecting_msg">Identifying species and characteristics...</string>
+    <string name="detecting_msg">Identifying species and characteristics…</string>
     <string name="analyzing_msg">🐾  Analyzing Wildlife  🐾</string>
     <string name="confidence">Confidence</string>
     <string name="add_description">Add a description</string>
-    <string name="description_placeholder">Share what you observed... behavior, habitat, weather conditions, or any interesting details!</string>
+    <string name="description_placeholder">Share what you observed… behavior, habitat, weather conditions, or any interesting details!</string>
     <string name="share_location">Share Location</string>
     <string name="share_location_description">Help others discover nearby animals</string>
     <string name="cancel_button">Cancel &amp; Retry</string>
@@ -98,7 +99,7 @@
     <string name="camera_request_msg_1">We need your camera so you can take pictures of animals that might be hurt or need help</string>
     <string name="camera_request_msg_2">Your photos help rescuers understand what is happening and act quickly</string>
     <string name="description">Description</string>
-    <string name="submitting">Submitting...</string>
+    <string name="submitting">Submitting…</string>
     <string name="submitted">Submit!</string>
 
     <!-- Report screen -->
@@ -114,4 +115,33 @@
     <string name="cancel_self_assigned_report">Cancel</string>
     <string name="report_assignee">Assigned to:</string>
 
+    <!-- Report details screen -->
+    <string name="report_details_bar_title">Back</string>
+    <string name="report_details_unknown_reporter">Unknown reporter</string>
+    <string name="report_details_resolved_title">Resolved. Thanks for handling the situation.</string>
+    <string name="report_details_resolved_message">With everything taken care of, we\'ll take you back to the reports.</string>
+    <string name="report_details_canceled_title">Deleted. If the situation evolves, feel free to reach out again.</string>
+    <string name="report_details_canceled_message">In the meantime, we\'ll take you back to the reports.</string>
+    <string name="report_details_back_reports">Back to reports</string>
+    <string name="report_details_show_less">Show less</string>
+    <string name="report_details_read_more">Read more</string>
+    <string name="report_details_cancel_first">Delete this report?</string>
+    <string name="report_details_cancel_second">This action is irreversible and will permanently delete the report.</string>
+    <string name="report_details_cancel_third">Delete report</string>
+    <string name="report_details_self_assign_first">Assign this report to you?</string>
+    <string name="report_details_self_assign_second">You will be marked as the person handling this situation.</string>
+    <string name="report_details_self_assign_third">Assign to me</string>
+    <string name="report_details_resolve_first">Mark this report as resolved?</string>
+    <string name="report_details_resolve_second">This action is irreversible and will permanently delete the report.</string>
+    <string name="report_details_resolve_third">Resolve</string>
+    <string name="report_details_unself_assign_first">Stop handling this report?</string>
+    <string name="report_details_unself_assign_second">You will no longer be assigned to this report.</string>
+    <string name="report_details_unself_assign_third">Unassign</string>
+    <string name="report_details_actions_dismiss">No, keep it</string>
+    <string name="report_details_button_delete">Delete</string>
+    <string name="report_details_button_cancel">Cancel</string>
+    <string name="report_details_navigate">Navigate to report</string>
+    <string name="report_details_google_maps">Open in Google Maps</string>
+    <string name="report_details_copy">Copy location</string>
+    <string name="report_details_share">Share location</string>
 </resources>
