--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,6 +74,8 @@
     <string name="trophies">Your trophies</string>
     <string name="unlocked_achievements">Unlocked</string>
     <string name="to_discover">To discover</string>
+    <string name="back">Back</string>
+    <string name="profile_picture">Profile picture</string>
 
     <!-- Camera screen -->
     <string name="camera_permission_msg_1">We promise not to take selfies. Just animals.</string>
