--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -167,5 +167,8 @@
     </plurals>
     <string name="report_details_assigned_to">Assigned to %1$s</string>
 
-
+    <!-- Offline screen -->
+    <string name="offline_title">You are offline</string>
+    <string name="offline_subtitle">Please check your internet connection.</string>
+    <string name="offline_message">This is not a bug… it\'s a purr-formance issue :O</string>
 </resources>
