--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -201,5 +201,6 @@
     <string name="offline_title">You are offline</string>
     <string name="offline_subtitle">Please check your internet connection.</string>
     <string name="offline_message">This is not a bug… it\'s a purr-formance issue :O</string>
+    <string name="no_discoveries">No discoveries yet, start exploring!</string>
 
 </resources>
