--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,10 +94,18 @@
     <string name="map_reports">Reports</string>
 
     <!-- Achievements screen -->
-    <string name="trophies">Your trophies</string>
+    <string name="achievements">Achievements</string>
     <string name="unlocked_achievements">Unlocked</string>
     <string name="to_discover">To discover</string>
     <string name="back">Back</string>
+    <string name="achievement_progress">Achievement Progress</string>
+    <string name="percentage_completed">%1$d%% completed</string>
+    <string name="wildex_certified">Wildex certified!</string>
+    <string name="keep_exploring">Keep exploring!</string>
+    <string name="completed">Completed</string>
+    <string name="in_progress">In Progress</string>
+    <string name="achieved_expected">%1$d / %2$d</string>
+    <string name="progress">Progress</string>
 
     <!-- Camera screen -->
     <string name="camera_permission_msg_1">We promise not to take selfies. Just animals.</string>
@@ -193,4 +201,6 @@
     <string name="offline_title">You are offline</string>
     <string name="offline_subtitle">Please check your internet connection.</string>
     <string name="offline_message">This is not a bug… it\'s a purr-formance issue :O</string>
+    <string name="no_discoveries">No discoveries yet, start exploring!</string>
+
 </resources>
